style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html, body {
	height: 100%;
}

html {
  font-size: 100%;
}

body {
	background: $white;
  font: 18px/1.4 $roboto;
  color: $darkGray;
}

.container {
  margin: 0 auto;
  padding: 0 10px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: inherit;
  color: $lightestBlue;
  font-weight: bold;

  line-height: 1.7;
  margin: 1em 0 15px;
  padding: 0;

  @include mobile {
    line-height: 1.4;
  }
}

h1 {
  font-size: 30px;
  a {
    color: inherit;
  }
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 18px;
}

p {
  margin: 15px 0;
}

a {
  color: $lightestBlue;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $tan;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: $gray;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.wrapper-masthead {
 
}

.masthead {
  padding: 20px 0;
  border-bottom: 1px solid $lightGray;

  @include mobile {
    text-align: center;
  }
}

.site-avatar {
  height: 50px;
  background: url('/images/ic_face_white_48px.svg') no-repeat 50% 50%;
  display: inline-block;
  vertical-align: middle;

  @include mobile {
    float: none;
    margin: 0 auto;
  }

  img {
    border-radius: 5px;
    width: inherit;
    vertical-align: middle;
  }
}
/*
.nav {
  float: right;
  z-index: 500;
  position: fixed;
  width: 100%;
  padding: 10px 0;

  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  -ms-transition: all 0.3s ease-in-out 0s;
  -o-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;

  &.affix {
    background: $lightestBlue;
    padding: 0;

    a {
      color: $blue;
    }

    .site-avatar {
      background: url('/images/ic_face_black_48px.svg');
    }
  }
}

nav {
  margin: 0 auto;
  width: 430px;
  font-family: inherit;
  font-size: 18px;
  text-align: center;

  @include mobile {
    float: none;
    margin-top: 9px;
    display: block;
    font-size: 16px;
  }

  a {
    margin-left: 20px;
    color: $lightestBlue;

    @include mobile {
      margin: 0 10px;
      color: $lightestBlue;
    }
  }
}
*/

nav {

  .navbar-header {
    .navbar-toggle {
      border-color: #ddd;
      .icon-bar {
        background-color: #888;
      }
    }
  }
  .container {
    margin: 0 auto;
    width: 500px;
    // font-family: inherit;
    font-size: 18px;
    text-align: center;
    padding: 0;

    font-family: $montserrat;
    font-size: 16px;

    .nav {
      li {
        width: 100px;
        padding: 15px 15px;

        @include mobile {
          padding: 0;
          width: 100%;
          border-bottom: 2px solid $blue;
        }

        &.active:not(.avatar) {
          background-color: $blue;
          color: $lightestBlue;
          -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
          -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
          box-shadow: inset 0 0 5px rgba(0,0,0,0.5);

          a {
            color: inherit;
          }
        }

        &.avatar {
          @include mobile {
            display: none;
          }
          &:hover {
            -webkit-animation-name: pulse;
            animation-name: pulse;
      
          }
          a {
            &:focus, &:hover {
              border: 0;
            }
          }
        }

        a {
          width: auto;
          padding: 15px 0;

          &:focus, &:hover {
            background-color: transparent;
            color: $lightestBlue;
            border-bottom: 3px solid $lightestBlue;
          }

            @include mobile {
              color: $blue;
              background-color: $lightestBlue;
              &:focus, &:hover { 
                color: $blue;
                border: 0; 
            }
          }
        }
      &.active {
        a {
            &:focus, &:hover {
            border: 0;
          }
        }
      }

      }
    }
  }

  &.navbar-fixed-top {
    border: 0;
  }

  @include mobile {
    background: #E9F2FC;
  }



  &.affix {
    background: $blue;
    padding: 0;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);

    -webkit-transition: all 0.5s ease-in-out 0s;
    -moz-transition: all 0.5s ease-in-out 0s;
    -ms-transition: all 0.5s ease-in-out 0s;
    -o-transition: all 0.5s ease-in-out 0s;
    transition: all 0.5s ease-in-out 0s;

    a {
      // color: $blue;
    }

    .nav {
      li {
        padding: 0px 15px;

        &:not(.avatar):not(.active) {
          &:focus, &:hover {
            background-color: $blue;
            color: $lightestBlue;
            moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
            -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
            box-shadow: 0 0 5px rgba(0, 0, 0, .5);

            a { color: inherit; }
          }

          a {
            &:focus, &:hover {
              border: 0;
            }
          }
        } 
      }
    }

    .site-avatar {
      // background: url('/images/ic_face_black_48px.svg') no-repeat 50% 50%;
    }
  }
}


.title {
	position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: $lightestBlue;
  font-family: inherit;
  text-align: center;

  @include mobile {
    width: 100%;
  }

  h1 {
      margin: 0;
      cursor: pointer;
      
      font-weight: 900;
      font-size: 64px;

      @include mobile {
        font-size: 48px;
      }
  }

  h2 {
      font-weight: 400;
      text-transform: uppercase;
      font-size: 22px;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: 16px;

  @include mobile {
    margin: 3px 0;
  }
}

.arrow-container {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 80px;
}

.arrow {
  width: 4em;
  height: 4em;
  border-left: 3px solid $lightestBlue;
  transform: rotate(225deg);
  border-top: 3px solid $lightestBlue;
}

#social-header {
  position: absolute;
  top: 0;
  right: 0px;
  padding: 5px;

  @include mobile {
    display: none;
  }
}

main {
	height: 100%;
	width: 100%;
	position: relative;
	
	section:nth-child(2n+1) {
    		background: $blue;
	}
	
	section:nth-child(2n) {
		background: $darkerBlue;
	}
}

//
// Sections

section {
	position: relative;
	overflow: hidden;
	min-height: 700px;
	text-align: center;
  padding: 120px 0;
  font-family: $montserrat;

  h3 {
    font-family: $montserrat; 
    color: $lighterBlue;
  }

  p {
    color: $lightestBlue;
  }
	
	&.feature {
		height: 90%;
		width: 100%;
		padding: 0;
	}

  &#about {
    min-height: 300px;
  }
}

.headline {
  
  h2 {
    font-size: 40px;
    font-weight: 700;
  }
}

figure.card {
 
  height: 335px;
  padding: 10px;
  background-color: $lighterBlue;
  border-radius: 3px;
  -webkit-box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.5);
  box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.5);
  margin: 7px;


  h3, p, h3 a {
    color: $blue;
  }
  img {
    max-width: 100%;
    border-radius: 3px;
  }

  // @include mobile {
  //   width: initial;
  //   margin: 7px;
  // }

  // @include desktop-sm {
  //   float: left;
  //   width: 48%;
  // }
}

.resume-item {
  ul, p {
    text-align: left;
    color: $lightestBlue;
    font-family: $roboto;
    font-size: 16px;
  }
}

.resume-place {
  color: $lightestBlue;
}
//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $gray;
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 15px;
  }
}

.wrapper-footer {
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  background-color: $lightestBlue;
  position: relative;
}

footer {
  padding: 20px 0;
  text-align: center;
  height: 200px;
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
@import "svg-icons";

